# OpenRLHF-Agent-xinye

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  requirements.txt  setup.py
docs/: ARCHITECTURE.md
examples/qwen3/: agent_func.py  agent_func_grm.py  run_vllm.sh  runtime_demo.py  train_reinforce_agent.sh
examples/qwen3/train_openrlhf/: agent_func_grm.py  agent_func_math.py
examples/search_r1/: agent_func.py  runtime_demo.py  train_reinforce_agent.sh
examples/search_r1/local_dense_retriever/: README.md  download.py  retrieval_server.py
examples/single_turn/: agent_func.py  runtime_demo.py  train_reinforce_agent.sh
scripts/: webui.py
src/openrlhf_agent/: __init__.py  agent.py  environment.py  model.py  template.py  types.py
src/openrlhf_agent/agentkit/: __init__.py  factory.py  runtime.py  session.py
src/openrlhf_agent/agentkit/environments/: __init__.py  base.py
src/openrlhf_agent/agentkit/protocols/: __init__.py  base.py
src/openrlhf_agent/agentkit/rewards/: __init__.py  base.py  factory.py  matching.py  pipeline.py
src/openrlhf_agent/agentkit/tools/: __init__.py  base.py
src/openrlhf_agent/backends/: __init__.py  base.py
src/openrlhf_agent/backends/hub/: __init__.py  openai.py
src/openrlhf_agent/chat_protocol/: __init__.py  base.py  qwen3_instruct.py  qwen3_thinking.py
src/openrlhf_agent/core/: __init__.py  models.py
src/openrlhf_agent/engine/: __init__.py  base.py  openai.py
src/openrlhf_agent/environment/: __init__.py  base.py  env.py  function_call.py  reward.py  single_turn.py  tools.py
src/openrlhf_agent/environment/reward/: __init__.py  base.py  factory.py  matching.py
src/openrlhf_agent/environment/tools/: __init__.py  base.py  final.py  registry.py  think.py
src/openrlhf_agent/orchestrator/: __init__.py  conversation.py  history.py  result.py  runtime.py  session.py
src/openrlhf_agent/runtime/: __init__.py  agent_runtime.py
src/openrlhf_agent/runtime/engine/: __init__.py  base.py  openai.py
src/openrlhf_agent/template/: __init__.py  base.py  qwen3.py  qwen3_instruct.py
src/openrlhf_agent/utils/: types.py
src/openrlhf_agent/utils/types/: __init__.py  action.py  (+1 more)
(+25 files in other folders)
