[project]
name = "openrlhf-agent"
version = "0.0.1"
description = "Minimal agent runtime primitives for OpenRLHF workflows."
readme = "README.md"
requires-python = ">=3.10"
license = {text = "Apache-2.0"}
authors = [{name = "freder"}]
dependencies = [
  "httpx>=0.27",
  "openai>=1.40",
  "pylatexenc>=2.10",
  "sympy>=1.12",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "pytest-asyncio>=0.23",
  "ruff>=0.5",
  "mypy>=1.10",
]
openrlhf = [
  "openrlhf>=0.9",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
